Corrupted Blend file with overridden MeshSequenceCache #86853

Closed
opened 2021-03-23 16:30:35 +01:00 by Steffen Dünner · 8 comments

System Information
Operating system: Linux-5.8.0-45-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.32.03

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-23 15:14, hash: 7046e37ede
Worked: (newest version of Blender that worked as expected)

Short description of error
Overriding the MeshSequenceCache causes the Blend file to instantly close Blender after saving and reloading it.

Exact steps for others to reproduce the error

  • Unzip the archive Link_Crash_v01.zip
  • It contains 3 files: an Alembic with a simple cube and changing topology, a library file that imports this ABC file and a "Link_Crash_v01.blend" file that links the collection containing the imported ABC.
  • Open the "Link_Crash_v01.blend"
  • A simple cube that changes topology during 25 frames.
  • Now go to the "MeshCacheSequence" modifier and SHIFT+click on the chain symbol to create an override (to e.g. have access to the "Override Frame" setting)
  • Save the blend file as a new version
  • Load this blend file (or just click "Revert" in the file menu)
  • Blender closes
**System Information** Operating system: Linux-5.8.0-45-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.32.03 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-23 15:14, hash: `7046e37ede` Worked: (newest version of Blender that worked as expected) **Short description of error** Overriding the MeshSequenceCache causes the Blend file to instantly close Blender after saving and reloading it. **Exact steps for others to reproduce the error** - Unzip the archive [Link_Crash_v01.zip](https://archive.blender.org/developer/F9905658/Link_Crash_v01.zip) - It contains 3 files: an Alembic with a simple cube and changing topology, a library file that imports this ABC file and a "Link_Crash_v01.blend" file that links the collection containing the imported ABC. - Open the "Link_Crash_v01.blend" - A simple cube that changes topology during 25 frames. - Now go to the "MeshCacheSequence" modifier and SHIFT+click on the chain symbol to create an override (to e.g. have access to the "Override Frame" setting) - Save the blend file as a new version - Load this blend file (or just click "Revert" in the file menu) - Blender closes

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Havent checked in detail, but In my debugger, it looks like the cashfile's override_library is 0x0, but even though direct_link_id_common checks against this, code enters BLO_read_list_cb and things go downhill from there.

1   BLI_listbase_is_empty             BLI_listbase.h    126  0x3ac97ba 
2   BLO_read_list_cb                  readfile.c        5620 0x3ac97ba 
3   direct_link_id_common             readfile.c        2500 0x3ac2935 
4   direct_link_id                    readfile.c        3309 0x3ac48c4 
5   read_libblock                     readfile.c        3704 0x3ac5471 
6   blo_read_file_internal            readfile.c        4180 0x3ac6846 
7   BLO_read_from_file                readblenentry.c   378  0x3abd60f 
8   BKE_blendfile_read                blendfile.c       477  0x4ba7556 
9   WM_file_read                      wm_files.c        766  0x3a0879c 
10  wm_file_read_opwrap               wm_files.c        2262 0x3a0b959 
11  wm_open_mainfile__open            wm_files.c        2390 0x3a0bea0 
12  operator_state_dispatch           wm_files.c        2298 0x3a0ba9b 
13  wm_open_mainfile_dispatch         wm_files.c        2414 0x3a0bf49 
14  wm_open_mainfile__discard_changes wm_files.c        2343 0x3a0bc49 
15  operator_state_dispatch           wm_files.c        2298 0x3a0ba9b 
16  wm_open_mainfile_dispatch         wm_files.c        2414 0x3a0bf49 
17  wm_open_mainfile_invoke           wm_files.c        2419 0x3a0bf72 
18  wm_operator_invoke                wm_event_system.c 1350 0x39fd95d 
19  wm_operator_call_internal         wm_event_system.c 1591 0x39fe1fb 
20  WM_operator_name_call_ptr         wm_event_system.c 1605 0x39fe292 
Can confirm. Havent checked in detail, but In my debugger, it looks like the cashfile's `override_library` is `0x0`, but even though `direct_link_id_common` checks against this, code enters `BLO_read_list_cb` and things go downhill from there. ``` 1 BLI_listbase_is_empty BLI_listbase.h 126 0x3ac97ba 2 BLO_read_list_cb readfile.c 5620 0x3ac97ba 3 direct_link_id_common readfile.c 2500 0x3ac2935 4 direct_link_id readfile.c 3309 0x3ac48c4 5 read_libblock readfile.c 3704 0x3ac5471 6 blo_read_file_internal readfile.c 4180 0x3ac6846 7 BLO_read_from_file readblenentry.c 378 0x3abd60f 8 BKE_blendfile_read blendfile.c 477 0x4ba7556 9 WM_file_read wm_files.c 766 0x3a0879c 10 wm_file_read_opwrap wm_files.c 2262 0x3a0b959 11 wm_open_mainfile__open wm_files.c 2390 0x3a0bea0 12 operator_state_dispatch wm_files.c 2298 0x3a0ba9b 13 wm_open_mainfile_dispatch wm_files.c 2414 0x3a0bf49 14 wm_open_mainfile__discard_changes wm_files.c 2343 0x3a0bc49 15 operator_state_dispatch wm_files.c 2298 0x3a0ba9b 16 wm_open_mainfile_dispatch wm_files.c 2414 0x3a0bf49 17 wm_open_mainfile_invoke wm_files.c 2419 0x3a0bf72 18 wm_operator_invoke wm_event_system.c 1350 0x39fd95d 19 wm_operator_call_internal wm_event_system.c 1591 0x39fe1fb 20 WM_operator_name_call_ptr wm_event_system.c 1605 0x39fe292 ```

Added subscriber: @mont29

Added subscriber: @mont29

Not related to overrides actually, this is a critical bug in CacheFile writing code (missing function call) that has been there since the initial commit (61050f75b1)!

Not related to overrides actually, this is a critical bug in CacheFile writing code (missing function call) that has been there since the initial commit (61050f75b1)!

This issue was referenced by 150e0553da

This issue was referenced by 150e0553daff3c9bd6f1921fb1f91a41e4017d78

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-03-25 11:25:01 +01:00
Thomas Dinges added this to the 2.93 LTS milestone 2023-02-07 18:46:16 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86853
No description provided.